syntax = "proto3";

package main;

option go_package = "pb/";

service PingPong {
  rpc SayHello(HelloRequest) returns (HelloReply) {}
}

//message HelloRequest { string name = 1; }

//message HelloReply {
//  string name = 2;
//  string phoneNumber = 3;
//  string street = 4;
//  int32 age = 5;
//  string sex = 6;
//}

message HelloRequest {
  string phone = 1;
  string street_name = 2;
  int32 street_number = 3;
  int32 zip_code = 4;
  string city = 5;
  string country = 6;
  string email = 7;
  string name = 8;
  string credit_card_number = 9;
  int32 credit_card_cvv = 10;
  int32 credit_card_expiration_year = 11;
  int32 credit_card_expiration_month = 12;
  int32 age = 13;
}

message HelloReply {
  string phone = 1;
  string street_name = 2;
  int32 street_number = 3;
  int32 zip_code = 4;
  string city = 5;
  string country = 6;
  string email = 7;
  string name = 8;
  string credit_card_number = 9;
  int32 credit_card_cvv = 10;
  int32 credit_card_expiration_year = 11;
  int32 credit_card_expiration_month = 12;
  int32 age = 13;
}
